--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 .red {
-    background-color: red;
+  background-color: red;
+}
+
+.yellow {
+  color: yellow;
+}
+
+.purple {
+  color: purple;
 }
